Bug 328307 - No horizontal scrolling possible in grepview
Summary: No horizontal scrolling possible in grepview
Status: RESOLVED FIXED
Alias: None
Product: kdevplatform
Classification: Developer tools
Component: grepview (other bugs)
Version First Reported In: git master
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2013-12-01 22:18 UTC by Kevin Funk
Modified: 2014-02-09 08:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Funk 2013-12-01 22:18:30 UTC
Title says it all.

Reproducible: Always

Steps to Reproduce:
1. Do a search where long lines will be matched
2. See truncated lines in grepview output view
3. Try to scroll horizontally
Actual Results:  
Doesn't work
Comment 1 Kevin Funk 2014-02-09 08:51:38 UTC
Git commit 8f4c04a1161a7ae4f823eb8efc1d2210175179df by Kevin Funk, on behalf of David Stevens.
Committed on 09/02/2014 at 08:20.
Pushed by kfunk into branch '1.6'.

Patch for bug 328307

No horizontal scrolling possible in grepview

Fixes the issue with horizontal scrolling described in the bug report.
Also fixes a known issue with text width calculation which becomes very obvious with horizontal scrolling.

REVIEW: 115342

M  +8    -4    plugins/grepview/grepoutputdelegate.cpp
M  +3    -0    plugins/grepview/grepoutputview.cpp

http://commits.kde.org/kdevplatform/8f4c04a1161a7ae4f823eb8efc1d2210175179df