Patch for bug 328307

No horizontal scrolling possible in grepview

Fixes the issue with horizontal scrolling described in the bug report.
Also fixes a known issue with text width calculation which becomes very obvious with horizontal scrolling.

REVIEW: 115342
BUG: 328307